--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
      <meta name="x5-fullscreen" content="true">
      <meta name="x5-page-mode" content="app">
      <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no,telephone=no,address=no">
+
+     <!-- 支付宝文档需要用到的js -->
+     <script src="https://gw.alipayobjects.com/as/g/h5-lib/alipayjsapi/3.1.0/alipayjsapi.min.js"></script>
+
   </head>
   <body>
     <div id="app"></div>
